Made the top bar work and have different behaviour if its logged in or not

--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,5 @@ turn the box of typing stuff to a nicer one
 make the review the same size always
 
 registering with the same email
+
+fix pictures size
