--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
-verify date of birth
 
-fix paths between all files (register in particular i think)
+NOTE: Remove what you have done, and let ppl know of what you are working so we dont have multiple ppl doing the same thing
+
+verify date of birth (just check if the month is <=12 and >=1 and day >=1 <=31 and year >=1900 and <=2019)
 
 change the name of the website from animelist to mygreatotakulist
 
@@ -14,7 +15,19 @@ fix pictures size to a specific size
 
 change color of report
 
+SHOVON: (or whoever is willing) Add the option to upload a pic in the profile, the code to do that is super simple (look at suggestAnime.js)
+
+I still need to figure out how to let ppl submit pics that are decently sized.
+
+
+END OF THE DAY:
+
+comment files
+
+remove logs
+
 fill it with dummy data
 
 make sure there is an account: admin admin and account: user user 
 
+make sure heroku is working
